# devbooster--python

./: .gitignore  README.md  pyproject.toml
src/devbooster/: __init__.py
src/devbooster/common/: BaseLogging.py  MetaSingleton.py  __init__.py  idle.py  interrupt_handler.py
src/devbooster/log/: CollectorLogger.py  __init__.py  root_logger_filter.py  settings.py  ticker.py  timing.py
tst/: test_idle.py  test_listify.py  test_log_basics.py  test_log_collector.py  test_log_context.py  test_log_jsoned.py  test_log_other_lib.py  test_log_rollover.py  test_log_ticker.py  test_project_root.py
